Поиск файлов по критерию [#493984] корректировка